--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
+
+bootRun {
+	systemProperties =  System.properties
+}
