--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+STRING = "DEFAULT"
+
+#Database
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.driverClassName=${DATASOURCE_DRIVER}
+spring.jpa.database-platform=${DATASOURCE_PLATFORM}
+spring.jpa.hibernate.ddl-auto=${DATASOURCE_DDL}
+
+#Database Credentials
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+
+
 
