--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@
 
 STRING = "LOCAL"
 
-DATASOURCE_URL=jdbc:h2:mem:testdb
+DATASOURCE_URL=jdbc:h2:mem:test
 DATASOURCE_DRIVER=org.h2.Driver
 
 DATASOURCE_USERNAME=sa
