--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,12 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checking out Code
+      uses: actions/checkout@v2
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
         java-version: 14.0.1
-    - name: Grant execute permission for gradlew
+    - name: Setup Gradle
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
