--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "2.8"
 }
 
 group = 'com.ppyfamily'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
+version = '0.0.1-ALPHA'
+sourceCompatibility = '14'
 
 repositories {
 	mavenCentral()
@@ -28,4 +29,13 @@ dependencies {
 
 bootRun {
 	systemProperties =  System.properties
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "Poom1997_PPYFAMILY_SERVICE"
+		property "sonar.organization", "poom1997"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.login", "22b89eeadaaa8b48e26893ab5ebcf95a49b97df9"
+	}
 }
