--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
-        java-version: 14.0.1
+        java-version: 11.0.7
     - name: Setup Gradle
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: SonarCloud Scan
+    - name: Sonarqube
       run: ./gradlew sonarqube
 
