--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,9 +24,6 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.github.token }}
-        SONAR_TOKEN: ${{ secrets.Sonarqube_Token }}
+    - name: SonarQube
+      run: ./gradlew sonarqube
 
