--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,4 +26,7 @@ jobs:
       run: ./gradlew build
     - name: SonarQube
       run: ./gradlew sonarqube
+      env:
+        GITHUB_TOKEN: ${{ secrets.github.token }}
+        SONAR_TOKEN: ${{ secrets.Sonarqube_Token }}
 
