Change to mongo and add ppylert warning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.hibernate.ddl-auto=${DATASOURCE_DDL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health, info
+management.endpoint.restart.enabled=true
 
 
 
