--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.7.RELEASE'
-	id 'java'
 	id "org.sonarqube" version "2.8"
+	id 'java'
+	id 'checkstyle'
 }
 
 group = 'com.ppyfamily'
@@ -14,16 +15,29 @@ repositories {
 }
 
 dependencies {
+	//Springboot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'org.postgresql:postgresql'
-	compileOnly 'org.projectlombok:lombok:1.18.8'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	//Logging
+	implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.13.2'
+
+	//Authentication
+	//implementation 'com.nimbusds:nimbus-jose-jwt:7.9'
+	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	//implementation 'com.auth0:java-jwt:3.4.0'
+
+	//Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
+	testImplementation 'de.bwaldvogel:mongo-java-server:1.34.0'
+	testImplementation 'io.rest-assured:rest-assured:3.1.0'
+	testRuntime 'org.junit.jupiter:junit-jupiter-engine'
+
+	//Lombok
+	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
@@ -38,4 +52,13 @@ sonarqube {
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.login", "73f85b657778ae6ad9e34098e2b3596cf653aca2"
 	}
+}
+
+checkstyle {
+	toolVersion = "8.29"
+	ignoreFailures = false
+	maxWarnings = 0
+	maxErrors = 0
+	sourceSets = [sourceSets.main, sourceSets.test]
+	reportsDir = file("$project.buildDir/reports/checkstyle")
 }
