--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.7.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.7.RELEASE'
-	id "org.sonarqube" version "2.8"
+	id 'org.springframework.boot' version '2.4.2'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id "org.sonarqube" version "3.1"
 	id 'java'
 	id 'checkstyle'
 }
 
 group = 'com.ppyfamily'
 version = '0.0.1-ALPHA'
-sourceCompatibility = '11'
+sourceCompatibility = '12'
 
 repositories {
 	mavenCentral()
@@ -21,24 +21,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	//Logging
-	implementation 'org.apache.logging.log4j:log4j-to-slf4j:2.13.2'
-
-	//Authentication
-	//implementation 'com.nimbusds:nimbus-jose-jwt:7.9'
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	//implementation 'com.auth0:java-jwt:3.4.0'
+	implementation 'org.slf4j:slf4j-api'
 
 	//Test
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.mockito:mockito-junit-jupiter'
-	testImplementation 'de.bwaldvogel:mongo-java-server:1.34.0'
-	testImplementation 'io.rest-assured:rest-assured:3.1.0'
+	testImplementation 'org.mockito:mockito-core'
+	testImplementation 'de.bwaldvogel:mongo-java-server:1.37.0'
 	testRuntime 'org.junit.jupiter:junit-jupiter-engine'
 
 	//Lombok
 	implementation 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok:1.18.8'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 bootRun {
@@ -55,7 +47,7 @@ sonarqube {
 }
 
 checkstyle {
-	toolVersion = "8.29"
+	toolVersion = "8.39"
 	ignoreFailures = false
 	maxWarnings = 0
 	maxErrors = 0
