--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 ## LOCAL ##
 
 STRING = "LOCAL"
-spring.data.mongodb.uri: mongodb://127.0.0.1:27017/ppylert
+spring.data.mongodb.uri: mongodb://127.0.0.1:27017/ppyfamily
 
