--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,17 +9,17 @@ on:
     branches: [ master, Release ]
 
 jobs:
-  build:
+  Tests:
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Checking out Code
       uses: actions/checkout@v2
-    - name: Set up JDK 12
+    - name: Set up JDK 11.0.9
       uses: actions/setup-java@v1
       with:
-        java-version: 12.0.2
+        java-version: 11.0.9
     - name: Setup Gradle
       run: chmod +x gradlew
     - name: Build with Gradle
