--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.ppyfamily'
 version = '0.0.1-ALPHA'
-sourceCompatibility = '12'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.slf4j:slf4j-api'
 
 	//Test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core'
 	testImplementation 'de.bwaldvogel:mongo-java-server:1.37.0'
 	testRuntime 'org.junit.jupiter:junit-jupiter-engine'
