--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ sonarqube {
 		property "sonar.projectKey", "Poom1997_PPYFAMILY_SERVICE"
 		property "sonar.organization", "poom1997"
 		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.login", ${SONARCLOUDTOKEN}
+		property "sonar.login", ${ SONAR_TOKEN }
 	}
 }
 
