--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Setup Gradle
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew clean build
+    - name: Build JAR
+      run: ./gradlew bootJar
     - name: SonarQube
       env:
         GITHUB_TOKEN: ${{ secrets.Sonarqube_Github_Token }}
