--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.Sonarqube_Github_Token }}
           SONAR_TOKEN: ${{ secrets.Sonarqube_Token }}
         run: ./gradlew sonarqube
-      - name: Build JAR
-        run: ./gradlew bootJar
   Deploy:
     needs: Tests
     environment:
@@ -34,6 +32,18 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Checking out Code
+        uses: actions/checkout@v2
+      - name: Set up JDK 11.0.9
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.9
+      - name: Setup Gradle
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Build JAR
+        run: ./gradlew bootJar
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
