--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-STRING = "DEFAULT"
+STRING = DEFAULT
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health, info
